package br.com.felipeltda.sistema.modelos;

import br.com.felipeltda.sistema.ficharios.CRUD;

import java.util.ArrayList;

public class Fichario implements CRUD {
    private ArrayList<Carro> carros;
    private ArrayList<Caminhao> caminhoes;
    private ArrayList<Onibus> onibus;

    @Override
    public void atualizar() {

    }
    @Override
    public void cadastrar() {

    }
    @Override
    public void ler() {

    }
    @Override
    public void remover() {

    }
}
